--- a/new/login.html
+++ b/new/login.html
@@ -21,10 +21,9 @@
     <script>
       const global = window.global || window;
     </script>
-    <script type="module" crossorigin src="/static/main2.js"></script>
-    <link rel="stylesheet" crossorigin href="/static/main.css">
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
