--- a/new/login.html
+++ b/new/login.html
@@ -16,7 +16,7 @@
       content="#0e1b2a"
     />
     <meta name="description" content="AWS DeepRacer" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/static/manifest.json" />
     <title>AWS DeepRacer</title>
     <script>
       const global = window.global || window;
